Bug 391294 - Cannot convert to path on text shape.
Summary: Cannot convert to path on text shape.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tool/Text (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-02 12:43 UTC by wolthera
Modified: 2018-04-03 11:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wolthera 2018-03-02 12:43:37 UTC
convert to path is in the edit shapes tool.

I had to move to inkscape to convert the text to a path for editing.

Not sure if bug or missing feature, but confusing none the less.
Comment 1 Halla Rempt 2018-03-02 12:45:29 UTC
Maybe that option should be removed for now?
Comment 2 jjking403 2018-03-29 14:07:34 UTC
i try using the convert to path and it crash every time i using it or it does not work at all. then it crash.
Comment 3 Halla Rempt 2018-03-29 15:39:44 UTC
Either removed or make to not crash...
Comment 4 Dmitry Kazakov 2018-04-02 12:40:32 UTC
Git commit b359d5c411e4f717a809f0ac3f472fc7f16aeebc by Dmitry Kazakov.
Committed on 02/04/2018 at 12:39.
Pushed by dkazakov into branch 'master'.

Implement "Convert text into path" function

The string should be actually a sticky string with the one in
parameter shape conversion command, so no extra translation is needed.

M  +46   -0    libs/flake/tests/TestSvgText.cpp
M  +2    -0    libs/flake/tests/TestSvgText.h
A  +-    --    libs/flake/tests/data/svg_render/load_text_outline.png
A  +-    --    libs/flake/tests/data/svg_render/load_text_outline_converted_to_path.png
M  +75   -0    libs/flake/text/KoSvgTextShape.cpp
M  +2    -0    libs/flake/text/KoSvgTextShape.h
M  +68   -6    libs/flake/tools/KoPathTool.cpp

https://commits.kde.org/krita/b359d5c411e4f717a809f0ac3f472fc7f16aeebc
Comment 5 Halla Rempt 2018-04-03 11:47:11 UTC
Git commit 7338eb8627c056bed874aa5df05e8aad49279235 by Boudewijn Rempt, on behalf of Dmitry Kazakov.
Committed on 03/04/2018 at 11:20.
Pushed by rempt into branch 'krita/4.0'.

Implement "Convert text into path" function

The string should be actually a sticky string with the one in
parameter shape conversion command, so no extra translation is needed.
(cherry picked from commit b359d5c411e4f717a809f0ac3f472fc7f16aeebc)

M  +46   -0    libs/flake/tests/TestSvgText.cpp
M  +2    -0    libs/flake/tests/TestSvgText.h
A  +-    --    libs/flake/tests/data/svg_render/load_text_outline.png
A  +-    --    libs/flake/tests/data/svg_render/load_text_outline_converted_to_path.png
M  +75   -0    libs/flake/text/KoSvgTextShape.cpp
M  +2    -0    libs/flake/text/KoSvgTextShape.h
M  +68   -6    libs/flake/tools/KoPathTool.cpp

https://commits.kde.org/krita/7338eb8627c056bed874aa5df05e8aad49279235