Implement "Convert text into path" function

The string should be actually a sticky string with the one in
parameter shape conversion command, so no extra translation is needed.

BUG:391294
(cherry picked from commit b359d5c411e4f717a809f0ac3f472fc7f16aeebc)