libs/flake/text/KoSvgTextShape.cpp
@@ -155,6 +155,81 @@ void KoSvgTextShape::paintStroke(QPainter &painter, const KoViewConverter &conve
     // do nothing! everything is painted in paintComponent()
 }
 
+QPainterPath KoSvgTextShape::textOutline()
+{
+    Q_D(KoSvgTextShape);
+
+    QPainterPath result;
+    result.setFillRule(Qt::WindingFill);
+
+
+    for (int i = 0; i < (int)d->cachedLayouts.size(); i++) {
+        const QPointF layoutOffset = d->cachedLayoutsOffsets[i];
+        const QTextLayout *layout = d->cachedLayouts[i].get();
+
+        for (int j = 0; j < layout->lineCount(); j++) {
+            QTextLine line = layout->lineAt(j);
+
+            Q_FOREACH (const QGlyphRun &run, line.glyphRuns()) {
+                const QVector<quint32> indexes = run.glyphIndexes();
+                const QVector<QPointF> positions = run.positions();
+                const QRawFont font = run.rawFont();
+
+                KIS_SAFE_ASSERT_RECOVER(indexes.size() == positions.size()) { continue; }
+
+                for (int k = 0; k < indexes.size(); k++) {
+                    QPainterPath glyph = font.pathForGlyph(indexes[k]);
+                    glyph.translate(positions[k] + layoutOffset);
+                    result += glyph;
+                }
+
+                const qreal thickness = font.lineThickness();
+                const QRectF runBounds = run.boundingRect();
+
+                if (run.overline()) {
+                    // the offset is calculated to be consistent with the way how Qt renders the text
+                    const qreal y = line.y();
+                    QRectF overlineBlob(runBounds.x(), y, runBounds.width(), thickness);
+                    overlineBlob.translate(layoutOffset);
+
+                    QPainterPath path;
+                    path.addRect(overlineBlob);
+
+                    // don't use direct addRect, because it does't care about Qt::WindingFill
+                    result += path;
+                }
+
+                if (run.strikeOut()) {
+                    // the offset is calculated to be consistent with the way how Qt renders the text
+                    const qreal y = line.y() + 0.5 * line.height();
+                    QRectF strikeThroughBlob(runBounds.x(), y, runBounds.width(), thickness);
+                    strikeThroughBlob.translate(layoutOffset);
+
+                    QPainterPath path;
+                    path.addRect(strikeThroughBlob);
+
+                    // don't use direct addRect, because it does't care about Qt::WindingFill
+                    result += path;
+                }
+
+                if (run.underline()) {
+                    const qreal y = line.y() + line.ascent() + font.underlinePosition();
+                    QRectF underlineBlob(runBounds.x(), y, runBounds.width(), thickness);
+                    underlineBlob.translate(layoutOffset);
+
+                    QPainterPath path;
+                    path.addRect(underlineBlob);
+
+                    // don't use direct addRect, because it does't care about Qt::WindingFill
+                    result += path;
+                }
+            }
+        }
+    }
+
+    return result;
+}
+
 void KoSvgTextShape::resetTextShape()
 {
     KoSvgTextChunkShape::resetTextShape();
