libs/flake/text/KoSvgTextShape.h
@@ -59,6 +59,8 @@ public:
      */
     void relayout();
 
+    QPainterPath textOutline();
+
 protected:
     /**
      * Show if the shape is a root of the text hierarchy. Always true for
